# Strategy

./: README.md
BuilderPattern/: CMakeLists.txt  Students.cpp  Students.h  main.cpp
BuilderPattern/BackUp/: ArmySnapshot.cpp  ArmySnapshot.h  UnitSnapshot.cpp  UnitSnapshot.h
BuilderPattern/Battle/: Battle.cpp  Battle.h
BuilderPattern/Factories/: FakiStudentsFactory.cpp  FakiStudentsFactory.h  RtStudentsFactory.cpp  RtStudentsFactory.h  StudentsFactory.cpp  StudentsFactory.h
BuilderPattern/FakiStudents/: FakiMathematic.cpp  FakiMathematic.h  FakiPhysicist.cpp  FakiPhysicist.h  FakiProger.cpp  FakiProger.h
BuilderPattern/RtStudents/: RtMathematic.cpp  RtMathematic.h  RtPhysicist.cpp  RtPhysicist.h  RtProger.cpp  RtProger.h
BuilderPattern/State/: DeathState.cpp  DeathState.h  PeaceState.cpp  PeaceState.h  State.cpp  State.h
BuilderPattern/Students/: Mathematic.cpp  Mathematic.h  Physicist.cpp  Physicist.h  Proger.cpp  Proger.h  Squad.cpp  Squad.h  Student.cpp  Student.h
BuilderPattern/Types/: Faki.cpp  Faki.h  RT.cpp  RT.h  Type.cpp  Type.h
